--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,2 +1,72 @@
 /* Libraries */
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css");
+@import url("https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.13.0/css/all.min.css");
+
+
+
+/* Social Media icons */
+.social-media-div {
+    font-size:2em
+}
+
+.icon-button {
+    margin-bottom:10px
+}
+
+.icon-button i {
+    color: #fff;
+    border-radius: 2.6rem;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.3rem;
+    height: 2.6rem;
+    line-height: 2.6rem;
+    position: relative;
+    text-align: center;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 2.6rem;
+    margin: 0 5px 10px;
+    transition:.2s ease-in
+}
+
+.facebook i {
+    background-color:#3b5998
+}
+
+.linkedin i {
+    background-color:#0e76a8
+}
+
+.github i {
+    background-color:#333
+}
+
+.google i {
+    background-color:#ea4335
+}
+
+.twitter i {
+    background-color:#1da1f2
+}
+
+.medium i {
+    background-color:#000
+}
+
+.instagram i {
+    background-color:#c13584
+}
+
+.facebook i:hover, .github i:hover, .gitlab i:hover, 
+.google i:hover, .instagram i:hover, .linkedin i:hover, 
+.medium i:hover, .stack-overflow i:hover, .twitter i:hover {
+    background-color:#000
+}
+
+/* @media (max-width: 768px) {
+    .social-media-div {
+        text-align:center
+    }
+} */
+
