Complete text input for home page

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,6 +30,10 @@
     transition:.2s ease-in
 }
 
+.icon-button {
+    text-decoration: none; /* Removes the underline */
+}
+
 .facebook i {
     background-color:#3b5998
 }
