Add CSS external styling for Contact Me Page

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -74,3 +74,82 @@
     }
 } */
 
+
+/* Contact Me Styling */
+.contact__form-container {
+    box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
+    background: white;
+    padding: 4rem;
+    margin-top: 6rem;
+    max-width: 80rem;
+    text-align: right;
+    width: 95%;
+    border-radius: 5px;
+    margin: 5rem auto 0 auto;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+ }
+
+ .contact__form-field {
+    margin-bottom: 4rem;
+}
+
+.contact__form-label {
+    color: #666;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    display: block;
+    text-align: left;
+    }
+.contact__form-input {
+    color: #333;
+    padding: 2rem;
+    width: 100%;
+    border: 1px solid #ebebeb;
+    font-size: 1.6rem;
+    letter-spacing: 0px;
+    background: #f0f0f0;
+    border-radius: 5px;
+    font-weight: 600;
+}
+.contact__btn {
+    width: 30%;
+    padding: 2rem 4rem;
+    font-size: 1.6rem;
+}
+
+    
+.btn--theme {
+    background: #7843E9;
+    color: #fff;
+}  
+
+
+/* Extra button styles */
+
+/* .btn {
+    background: #7843E9;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+    font-weight: 700;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px 0 rgba(0,0,0,0.15);
+    transition: transform .3s;
+    } */
+
+
+    /* page main margin styles */
+    
+    /* *, *::after, *::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: inherit;
+        font-family: inherit;
+        }     */
