Add HTML for my_resume.htlm

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -69,7 +69,7 @@
 
 .facebook i:hover, .github i:hover, 
 .google i:hover, .instagram i:hover, .linkedin i:hover, 
-.medium i:hover,, .twitter i:hover {
+.medium i:hover, .twitter i:hover {
     background-color:#000
 }
 
