--- a/Styles/style.css
+++ b/Styles/style.css
@@ -204,3 +204,14 @@ form {
         box-sizing: inherit;
         font-family: inherit;
         }     */
+
+
+
+ /* my_resume styling  */
+
+table, th, td {
+    border:1px solid black; 
+    border-collapse: collapse;
+    text-align: center;
+    padding:10px 30px 10px 30px;
+} 
