--- a/Styles/style.css
+++ b/Styles/style.css
@@ -253,6 +253,7 @@ header > h4{
     font-size: 20px;
     margin-top: 50px;
     margin-bottom:50px;
+    color:#5c3370;
 }
 
 
@@ -275,7 +276,7 @@ header > h4{
 }
 
 .contact__form_label, .newsletter_label {
-    color: #667;
+    color: #000;
     font-size: 20px;
     letter-spacing: 1px;
     font-weight: 700;
@@ -294,6 +295,7 @@ header > h4{
     background: #f0f0f0;
     border-radius: 5px;
     font-weight: 600;
+    background-color: #f9f4f5;
 }
 
 
